# beta_ws

./: .gitignore  AGENTS.md  README.md
src/bt_app/: pyproject.toml
src/bt_app/bt_app/: app.py  config_service.py
src/bt_app/bt_app/common/: __init__.py
src/bt_app/bt_app/control/: __init__.py
src/bt_app/bt_app/mission/: takeoff_and_go.py  track.py
src/bt_app/bt_app/msgs/: __init__.py
src/bt_app/bt_app/msp/: __init__.py  betaflight.py
src/bt_app/bt_app/sensors/: __init__.py  gz_camera.py  gz_odom.py  zmq_odom_view.py
src/bt_app/bt_app/trackers/: __init__.py  image_display.py  red_box_tracker.py
src/bt_app/bt_cli/: cli.py
src/bt_app/tests/: gz_camera_view.py  rc_arm.py  rc_arm_net.py  rc_hover_net.py  status.py  telem.py  test_velocty_message.py
src/bt_bringup/: pyproject.toml
src/bt_bringup/bt_bringup/: __init__.py
src/bt_bringup/config/: full_parameter.txt
src/bt_bringup/launch/: app.kdl  app.sh  gz.launch.sh
